--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ section .title::after{
     justify-content: space-between;
 }
 .navbar .logo a{
-    color: #fff;
+    color: #ffe900;
     font-size: 35px;
     font-weight: 600;
     opacity: 100%;
